[package]
name = "todo-api-axum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features = ["env-filter"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
http-body = "0.4.5"
validator = { version = "0.16.0", features = ["derive"] }